user icons on mobile bug fix

--- a/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
+++ b/public/acm/AlaatvCustomFiles/css/fixThemeStyle.css
@@ -63,6 +63,10 @@ select.form-control {
     text-align: right;
 }
 
+
+.m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-nav__link-icon {
+    height: 41px;
+}
 .m-topbar .m-topbar__nav.m-nav > .m-nav__item > .m-nav__link .m-topbar__userpic img {
     width: 41px;
     height: 41px;
